Refactoring ScrubTown and ValueTown into CardSelections.js

--- a/08-value-town/value_town.html
+++ b/08-value-town/value_town.html
@@ -11,8 +11,7 @@
     </head>
     <body>
       <script src="js/Card.js"></script>
-      <script src="js/ValueTown.js"></script>
-      <script src="js/ScrubTown.js"></script>
+      <script src="js/CardSelections.js"></script>
       <script src="js/Selection.js"></script>
       <script src="js/App.js"></script>
     </body>
