--- a/09-weather/weather.html
+++ b/09-weather/weather.html
@@ -10,6 +10,9 @@
         <script src="js/jquery.min.js"></script>
     </head>
     <body>
-      <script src="dist/js/weather.react.js"></script>
+      <script src="js/ForecastItem.js"></script>
+      <script src="js/Forecast.js"></script>
+      <script src="js/LocationForm.js"></script>
+      <script src="js/Weather.js"></script>
     </body>
 </html>
