--- a/02-simple-jsx-example/hello.html
+++ b/02-simple-jsx-example/hello.html
@@ -15,7 +15,7 @@
 
             render: function() {
               return (
-                <h1>Hello world!</h1>
+                <h1 className="text-center">Hello world!</h1>
               );
             }
           });
