--- a/03-transpiler/transpiler.html
+++ b/03-transpiler/transpiler.html
@@ -11,6 +11,6 @@
     <body>
       <div id="container" class="container">
       </div>
-      <script src="dist/js/app.react.js"></script>
+      <script src="js/app.js"></script>
     </body>
 </html>
